<resources>
    <string name="app_name">Tripper</string>
    <string name="developer">Developed by Harsh</string>
    <string name="lets_get_started">let\'s Get Started</string>

    <string name="slider1_header">Welcome to Tripper</string>
    <string name="slider_desc1">Dreamt of travelling around the world with your backpack?</string>
    <string name="pack_bags">Pack Bags</string>
    <string name="bagpack">Bagpack</string>
    <string name="slider2_header">Location Search</string>
    <string name="slider_desc2">Search your Favorite Location using Search Bar</string>
    <string name="slider3_header">User Friendly UI</string>
    <string name="slider_desc3">Enjoy the Customized User Interface and Animated Places</string>
    <string name="slider4_header">Enjoy the Application</string>
    <string name="slider_desc4">Get\'s started with this amazing platform and must provide reviews</string>
    <string name="skip">skip</string>

    <!-- Strings for Dashboard -->

    <!-- Categories -->
    <string name="hotels">Hotels</string>
    <string name="restaurant">Restaurant</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!-- Titles & Description -->
    <string name="featured_locations">All Featured Location</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in India</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="places_categories">Places Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search</string>
    <string name="home">Home</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="share_us">Share Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="travel_around_the_world">Travel around the world</string>
    <string name="expand_all">EXPAND ALL</string>
    <string name="Beach">Beaches</string>
    <string name="hill">Hill Station</string>
    <string name="island">Island</string>
    <string name="town_cities"><![CDATA[Town & Cities]]></string>
    <string name="contribute">Contribute Here</string>
    <string name="contribute_desc">Contribute here and become the local guide of your city</string>
    <string name="SignUp">Sign Up</string>
    <string name="how_we_work">How we Work?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="next_btn">Next</string>
    <string name="back">Back</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on +917004899150</string>
    <string name="forgot_password_detail">Provide Your Phone Number for which you want to reset your password</string>
    <string name="make_selection">Select which method you would use to reset your password?</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_phoneNo">Enter Phone Number</string>



    <string-array name="categories">
        <item>Beaches</item>
        <item>Hill Station</item>
        <item>Island</item>
        <item>Town</item>
        <item>Cities</item>
        <item>Monuments</item>
        <item>Place</item>
    </string-array>

</resources>