<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:padding="30dp"
    tools:context=".Common.LoginSignUp.LocationContributorStartupScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/travel_world" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/arbutus"
            android:text="@string/contribute"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#C60021"
            android:textSize="29sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/aldrich"
            android:text="@string/contribute_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:onClick="callLoginScreen"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/SignUp"
                android:onClick="callSignUpScreen"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:text="@string/how_we_work"
            android:textStyle="bold"/>
    </LinearLayout>



</ScrollView>