<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slider_img"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:contentDescription="@string/bagpack"
        android:padding="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backpack" />

    <TextView
        android:id="@+id/slider_heading"
        android:layout_width="286dp"
        android:layout_height="83dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/arbutus"
        android:gravity="center"
        android:text="@string/pack_bags"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_img" />

    <TextView
        android:id="@+id/slider_desc"
        android:layout_width="327dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/slider_desc3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_heading" />
</androidx.constraintlayout.widget.ConstraintLayout>