<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    tools:context=".User.AllCategoires">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/back_32px" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_search_24" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:padding="10dp"
            android:text="@string/categories"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/categoires_back1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/Beach"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="-20dp"
                android:src="@drawable/beach_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/categoires_back2">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="-25dp"
                android:layout_marginTop="-40dp"
                android:src="@drawable/hill_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/hill"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categoires_back3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/island"
                    android:textColor="@color/white"
                    android:textSize="35sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="15dp"
                    android:text="@string/expand_all"
                    android:textColor="@color/cardview_light_background" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="-40dp"
                    android:layout_marginRight="-20dp"
                    android:src="@drawable/island_icon" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:background="@drawable/categories_back5">

            <ImageView
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="-100dp"
                android:layout_marginTop="-70dp"
                android:src="@drawable/heritage_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="25dp"
                android:text="@string/town_cities"
                android:textColor="@color/light_white"
                android:textSize="35sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:padding="20dp"
                android:text="@string/expand_all"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>